--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
+						<h1><a href="index.html">BOYFRIEND</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
