--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BOYFRIEND</h2>
-							<p>Another fine responsive<br />
+							<p>Korean Pop Band<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
