--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BOYFRIEND</h2>
-							<p>Korean Pop Band<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Korean Pop Boy Group<br />
+							Starship Entertainment<br />
+							20110526 <a href="http://starship-ent.com/boyfriend">About</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
