--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
 							<h2>BOYFRIEND</h2>
 							<p>Korean Pop Boy Group<br />
 							Starship Entertainment<br />
-							20110526 <a href="http://starship-ent.com/boyfriend">About</a>.</p>
+							20110526<br /> </p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">About Them</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2> BOYFRIEND<br />
+								Dong Hyun  Hyun Seong  Jeong Min Young Min  Kwang Min Min Woo</h2>
+								<p>They are the first boy band to have twin member<br />
+								They debuted on Mnet's M!Countdown on 2011/05/26</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
