--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2> BOYFRIEND<br />
-								Dong Hyun  Hyun Seong  Jeong Min Young Min  Kwang Min Min Woo</h2>
-								<p>They are the first boy band to have twin member<br />
-								They debuted on Mnet's M!Countdown on 2011/05/26</p>
+								<h1> BOYFRIEND </h1>
+								<h2> Dong Hyun  Hyun Seong  Jeong Min <br />
+								Young Min  Kwang Min  Min Woo</h2>
+								<p>They are the first boy band to have twin member.<br />
+								They debuted on Mnet's M!Countdown on 2011/05/26.</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
