--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h1> BOYFRIEND </h1> <br />
-								<h2> DongHyun  HyunSeong  JeongMin <br />
-								YoungMin  KwangMin  MinWoo</h2>
+								<h2> BOYFRIEND<br />
+								DongHyun  HyunSeong  JeongMin<br />
+								YoungMin  KwangMin MinWoo</h2>
 								<p>They are the first boy band to have twin member.<br />
 								They debuted on Mnet's M!Countdown on 2011/05/26.</p>
 							</header>
