--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2> BOYFRIEND<br />
+								<h2> <h1>BOYFRIEND</h1><br />
 								DongHyun  HyunSeong  JeongMin<br />
 								YoungMin  KwangMin MinWoo</h2>
 								<p>They are the first boy band to have twin member.<br />
