--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>Magna primis lobortis<br />
 								sed ullamcorper</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
