--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
+								<h2>BOYFRIEND<br />
+								2011/05/25</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
