--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>BOYFRIEND<br />
 								2011/05/25</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>First Single Album "BOYFRIEND" </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/f1cZ2uzxCjI?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
+								<h2>DON'T TOUCH MY GIRL<br />
+								2011/11/05</h2>
+								<p>Second Single Album "Don't Touch My Girl"</p>
 							</div>
 						</section>
 						<section class="spotlight">
