--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Background</a></li>
 											<li><a href="elements.html">Album</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="#https://www.facebook.com/officialBF">Facebook Page</a></li>
+											<li><a href="#http://www.starship-ent.com/boyfriend/">Offical Website</a></li>
 										</ul>
 									</div>
 								</li>
