--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											<li><a href="generic.html">Background</a></li>
 											<li><a href="elements.html">Album</a></li>
 											<li><a href="#https://www.facebook.com/officialBF">Facebook Page</a></li>
-											<li><a href="#http://www.starship-ent.com/boyfriend/">Offical Website</a></li>
+											<li><a href="#http://www.starship-ent.com/boyfriend/ target="_blank" ">Offical Website</a></li>
 										</ul>
 									</div>
 								</li>
