--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Background</a></li>
 											<li><a href="elements.html">Album</a></li>
-											<li><a href="#https://www.facebook.com/officialBF">Facebook Page</a></li>
+											<li><a href="https://www.facebook.com/officialBF"target="_blank">Facebook Page</a></li>
 											<li><a href="#http://www.starship-ent.com/boyfriend/ target="_blank" ">Offical Website</a></li>
 										</ul>
 									</div>
