--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 								<li class="icon fa-flag-o">
 									<h3>No Minwoo</h3>
 									<p>1995/07/31</p>
+									<img src="http://www.starship-ent.com/files/attach/images/242/360/070/87ad82a0c4cc1c6d665343316088e20f.jpg" alt="" width=100% />
 								</li>
 							</ul>
 						</div>
