--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Background</a></li>
-											<li><a href="elements.html">Album</a></li>
+											<li><a href="https://twitter.com/G_BoyFriend">Twitter</a></li>
+											<li><a href="http://cafe.daum.net/BOYFRIEND">Daum Cafe</a></li>
 											<li><a href="https://www.facebook.com/officialBF"target="_blank">Facebook Page</a></li>
 											<li><a href="http://www.starship-ent.com/boyfriend/"target="_blank">Official Website</a></li>
 										</ul>
