--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="https://twitter.com/G_BoyFriend">Twitter</a></li>
-											<li><a href="http://cafe.daum.net/BOYFRIEND">Daum Cafe</a></li>
-											<li><a href="https://www.facebook.com/officialBF"target="_blank">Facebook Page</a></li>
 											<li><a href="http://www.starship-ent.com/boyfriend/"target="_blank">Official Website</a></li>
+											<li><a href="https://boyfriend-official.jp/"target="_blank">Official Website (Japan)</a></li>
+											<li><a href="http://cafe.daum.net/BOYFRIEND"target="_blank">Daum Cafe</a></li>
+											<li><a href="https://twitter.com/G_BoyFriend"target="_blank">Twitter</a></li>
+											<li><a href="https://www.facebook.com/officialBF"target="_blank">Facebook Page</a></li>
+
 										</ul>
 									</div>
 								</li>
