--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>BOYFRIEND</h2>
+							<h1>BOYFRIEND</h1>
 							<p>Korean Pop Boy Group<br />
 							Starship Entertainment<br />
 							20110526<br /> </p>
@@ -58,8 +58,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2> <h1>BOYFRIEND</h1><br />
-								DongHyun  HyunSeong  JeongMin<br />
+								<h1>BOYFRIEND</h1><br />
+								<h2> DongHyun  HyunSeong  JeongMin<br />
 								YoungMin  KwangMin MinWoo</h2>
 								<p>They are the first boy band to have twin member.<br />
 								They debuted on Mnet's M!Countdown on 2011/05/26.</p>
