--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>MEMBER</h2>
+								<h1>MEMBER</h1>
 							
 							</header>
 							<ul class="features">
@@ -120,6 +120,7 @@
 
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
+						<header class="major"> <h1> Albums released in 2011 </h1> </header>
 							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>BOYFRIEND<br />
 								2011/05/26</h2>
