--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 										<ul>
 											<li><a href="http://www.starship-ent.com/boyfriend/"target="_blank">Official Website</a></li>
 											<li><a href="https://boyfriend-official.jp/"target="_blank">Official Website (Japan)</a></li>
-											<li><a href="http://cafe.daum.net/BOYFRIEND"target="_blank">Daum Cafe</a></li>
 											<li><a href="https://twitter.com/G_BoyFriend"target="_blank">Twitter</a></li>
+											<li><a href="https://twitter.com/officialBFjp"target="_blank">Twitter (Japan)</a></li>
+											<li><a href="http://cafe.daum.net/BOYFRIEND"target="_blank">Daum Cafe</a></li>
 											<li><a href="https://www.facebook.com/officialBF"target="_blank">Facebook Page</a></li>
+											<li><a href="https://www.youtube.com/user/boyfriendjp">Youtube </a></li>
 
 										</ul>
 									</div>
@@ -159,9 +161,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://twitter.com/G_BoyFriend"target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/officialBF"target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/boy_e.black/"target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
