--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
+								<li class="fa fa-anchor">
 									<h3>Kim Donghyun</h3>
 									<p>1989/02/12</p>
 									<img src="http://www.starship-ent.com/files/attach/images/242/344/070/647516e09e1273478be5c9534d4312d4.jpg" alt="" width=100% />
