--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<li><a href="https://twitter.com/G_BoyFriend"target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/officialBF"target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/boy_e.black/"target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.youtube.com/user/boyfriendjp"target="_blank" class="fa fa-youtube-square"><span class="label">YouTube</span></a></li>
+							<li><a href="https://www.youtube.com/user/boyfriendjp"target="_blank" class="fa fa-youtube-square"><span class="label"></span></a></li>
 
 						</ul>
 						<ul class="copyright">
