--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://twitter.com/G_BoyFriend"target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/officialBF"target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/G_BoyFriend"target="_blank" class="icon fa-twitter"><span class="label"></span></a></li>
+							<li><a href="https://www.facebook.com/officialBF"target="_blank" class="icon fa-facebook"><span class="label"></span></a></li>
 							<li><a href="http://cafe.daum.net/BOYFRIEND"target="_blank" class="fa fa-coffee"><span class="label"></span></a></li>
-							<li><a href="https://www.instagram.com/boy_e.black/"target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/boy_e.black/"target="_blank" class="icon fa-instagram"><span class="label"></span></a></li>
 							<li><a href="https://www.youtube.com/user/boyfriendjp"target="_blank" class="fa fa-youtube-square"><span class="label"></span></a></li>
 
 						</ul>
