--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<p>1995/04/24</p>
 									<img src="http://www.starship-ent.com/files/attach/images/242/356/070/ca2a6d24163e29ee07f921905d4b77d7.jpg" alt="" width=100% />
 								</li>
-								<li class="icon fa-flag-o">
+								<li class="icon fa-flag-o" <a href="https://twitter.com/BOYF_MW" target="_blank"></a> >
 									<h3>No Minwoo</h3>
 									<p>1995/07/31</p>
 									<img src="http://www.starship-ent.com/files/attach/images/242/360/070/87ad82a0c4cc1c6d665343316088e20f.jpg" alt="" width=100% />
@@ -124,21 +124,21 @@
 
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
+							<div class="image"><iframe width="100%" height="315" src="https://www.youtube.com/embed/zd5GGvWWnzU?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>BOYFRIEND<br />
 								2011/05/26</h2>
 								<p>First Single Album "BOYFRIEND" </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/f1cZ2uzxCjI?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
+							<div class="image"><iframe width="100%" height="315" src="https://www.youtube.com/embed/f1cZ2uzxCjI?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>DON'T TOUCH MY GIRL<br />
 								2011/11/06</h2>
 								<p>Second Single Album "Don't Touch My Girl"</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/CipF26oiY54?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
+							<div class="image"><iframe width="100%" height="315" src="https://www.youtube.com/embed/CipF26oiY54?rel=0" frameborder="0" allowfullscreen></iframe></div><div class="content">
 								<h2>I'LL BE THERE<br />
 								2011//12/08</h2>
 								<p>Third Single Album "I'll Be There"</p>
