--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 									<p>1995/04/24</p>
 									<img src="http://www.starship-ent.com/files/attach/images/242/356/070/ca2a6d24163e29ee07f921905d4b77d7.jpg" alt="" width=100% />
 								</li>
-								<li class="icon fa-flag-o"  > <a href="https://twitter.com/BOYF_MW" target="_blank"></a>
+								<li class="icon fa-flag-o"  > 
 									<h3>No Minwoo</h3>
 									<p>1995/07/31</p>
-									<img src="http://www.starship-ent.com/files/attach/images/242/360/070/87ad82a0c4cc1c6d665343316088e20f.jpg" alt="" width=100% />
+									<a href="https://twitter.com/BOYF_MW" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/360/070/87ad82a0c4cc1c6d665343316088e20f.jpg" alt="" width=100%  /></a>
 								</li>
 							</ul>
 						</div>
