--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 									<p>1993/06/09</p>
 									<a href="https://twitter.com/BOYF_HS" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/347/070/ff04db6a3f50a1ee4612fe5de5f5f2d9.jpg" alt="" width=100% /></a>
 								</li>
-								<li class="icon fa-code">
+								<li class="fa fa-music">
 									<h3>Lee Jeongmin</h3>
 									<p>1994/01/02</p>
 									<a href="https://twitter.com/BOYF_JM" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/350/070/10f42d9abdf7074f673cabf4015bbe83.jpg" alt="" width=100% /></a>
 								</li>
-								<li class="icon fa-headphones">
+								<li class="fa fa-headphones">
 									<h3>Jo Youngmin</h3>
 									<p>1995/04/24</p>
 									<a href="https://twitter.com/BOYF_YM" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/353/070/f0f6f60bb13acd4984cc5a2b85524fd3.jpg" alt="" width=100% /></a>
