--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<p>1995/04/24</p>
 									<a href="https://twitter.com/BOYF_YM" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/353/070/f0f6f60bb13acd4984cc5a2b85524fd3.jpg" alt="" width=100% /></a>
 								</li>
-								<li class="icon fa-heart-o">
+								<li class="fa fa-heart-o">
 									<h3>Jo Kwangmin</h3>
 									<p>1995/04/24</p>
 									<a href="https://twitter.com/BOYF_KM" target="_blank"><img src="http://www.starship-ent.com/files/attach/images/242/356/070/ca2a6d24163e29ee07f921905d4b77d7.jpg" alt="" width=100% /></a>
