--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						<div class="inner">
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Home</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="jumpgame/index.html" class="button fit" target="_blank">Game</a></li>
 							</ul>
 						</div>
 					</section>
