--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="icon"  href="http://static.tumblr.com/6c1a3fe65afb8f10ae4e60edd43fbeef/elvaunz/rq3mgd1jd/tumblr_static_logo1edited2.jpg" type="image/x-icon" />
 	</head>
 	<body class="landing">
 
@@ -155,7 +156,6 @@
 							</ul>
 						</div>
 					</section>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
