--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Home</a></li>
 								<li><a href="jumpgame/index.html" class="button fit" target="_blank">Game</a></li>
+								<li><a href="game/index.html" class="button fit" target="_blank">Game</a></li>
 							</ul>
 						</div>
 					</section>
