--- a/game/index.html
+++ b/game/index.html
@@ -39,6 +39,7 @@
 	</footer>
   </div><!-- End Wrap -->
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <embed src="DEADPOOL.mp3" autostart="true" loop="true" hidden="true">
 
         <script src="js/index.js"></script>
 
