--- a/game/index.html
+++ b/game/index.html
@@ -23,7 +23,7 @@
 	
 	<div class="modal-overlay">
 		<div class="modal">
-			<h2 class="winner">You Rock!</h2>
+			<h2 class="winner"> Congratulations!</h2>
 			<button class="restart">Play Again?</button>
 			<p class="message">Developed on <a href="http://codepen.io">CodePen</a> by <a href="http://codepen.io/natewiley">Nate Wiley</a></p>
 			<p class="share-text">Share it?</p>
