--- a/game/index.html
+++ b/game/index.html
@@ -23,14 +23,14 @@
 	
 	<div class="modal-overlay">
 		<div class="modal">
-			<h2 class="winner"> Congratulations!</h2>
+			<h5 class="winner"> Congrats!</h5>
 			<button class="restart">Play Again?</button>
-			<p class="message">Developed on <a href="http://codepen.io">CodePen</a> by <a href="http://codepen.io/natewiley">Nate Wiley</a></p>
+			<p class="message">Developed on <a href="http://codepen.io">CodePen</a> by <a href="http://codepen.io/shanyuwsy">shanyuwsy</a></p>
 			<p class="share-text">Share it?</p>
 			<ul class="social">
-				<li><a target="_blank" class="twitter" href="http://twitter.com/share?url=http://codepen.io/natewiley/pen/HBrbL"><span class="brandico-twitter-bird"></span></a></li>
-				<li><a target="_blank" class="facebook" href="http://www.facebook.com/sharer.php?u=http://codepen.io/natewiley/pen/HBrbL"><span class="brandico-facebook"></span></a></li>
-				<li><a target="_blank" class="google" href="https://plus.google.com/share?url=http://codepen.io/natewiley/pen/HBrbL"><span class="brandico-googleplus-rect"></span></a></li>
+				<li><a target="_blank" class="twitter" href="http://twitter.com/share?url=https://codepen.io/shanyuwsy/pen/mPBPxO"><span class="brandico-twitter-bird"></span></a></li>
+				<li><a target="_blank" class="facebook" href="http://www.facebook.com/sharer.php?u=https://codepen.io/shanyuwsy/pen/mPBPxO"><span class="brandico-facebook"></span></a></li>
+				<li><a target="_blank" class="google" href="https://plus.google.com/share?url=https://codepen.io/shanyuwsy/pen/mPBPxO"><span class="brandico-googleplus-rect"></span></a></li>
 			</ul>
 		</div>
 	</div>
